Updates sample so that themed variables work with IE11

--- a/src/Pages/Pivot/Pivot.scss
+++ b/src/Pages/Pivot/Pivot.scss
@@ -1,4 +1,4 @@
-@import "_platformCommon.scss";
+@import "node_modules/vss-ui/Core/_platformCommon.scss";
 
 .sample-pivot {
     font-size: $fontSizeM;
