--- a/src/Pages/Hub/Hub.scss
+++ b/src/Pages/Hub/Hub.scss
@@ -1,4 +1,4 @@
-@import "_platformCommon.scss";
+@import "node_modules/vss-ui/Core/_platformCommon.scss";
 
 .sample-hub {
     font-size: $fontSizeM;
