Updates sample extension to latest SDK, API, and UI libraries Adds toast sample.

--- a/src/Common.scss
+++ b/src/Common.scss
@@ -4,10 +4,6 @@
     display: flex;
 }
 
-.sample-button {
-    min-width: 80px;
-}
-
-.sample-button-left-margin {
+.left-content-spacing {
     margin-left: 16px;
 }
